# StorageCompressAI

./: .gitignore  EXPLAINER_IMAGE_COMPRESSOR.md  EXPLAINER_IMAGE_COMPRESSOR_DETAILED.md  README.en.md  README.md  docker-compose.yml
image-compressor-fastify-api/: .dockerignore  Dockerfile  package.json
image-compressor-fastify-api/src/: config.js  middleware.js  server.js  utils.js
image-compressor-fastify-api/src/routes/: compression.js
image-compressor-fastify-api/src/services/: compression.js  supabase.js
image-compressor-rust-service/: .dockerignore  Cargo.toml  Dockerfile
image-compressor-rust-service/src/: lib.rs  main.rs
