[package]
name = "image-compressor-rust-service"
version = "0.1.0"
edition = "2021"
description = "A robust and optimized JPEG image compression web service."
authors = ["WestFS <west.flower0403@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/WestFS/image-compressor"
keywords = ["image", "compression", "jpeg", "axum", "microservice"]
categories = ["web-programming::http-server", "multimedia::images"]

[dependencies]
# Web framework and server
axum = { version = "0.7", features = ["multipart", "headers"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "timeout", "limit"] }

# Image processing
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp"] }
rimage = "0.11"
zune-image = "0.4.19"
zune-core = "0.4.19"

# CLI and argument parsing
clap = { version = "4.4", features = ["derive"] }
clap-verbosity-flag = "2.0"
is-terminal = "0.4"

# Error handling and logging
anyhow = "1.0"
tracing = { version = "0.1", features = ["attributes", "log"] }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
log = "0.4"  # Still needed for compatibility with some image crates
env_logger = "0.10"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"

# Metrics and monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1  # Slightly faster builds while maintaining good debug info