[package]
name = "image-compressor-rust-service"
version = "0.1.0"
edition = "2021"
description = "A robust and optimized JPEG image compression web service."
authors = ["WestFS <west.flower0403@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/WestFS/StorageCompressAI"
keywords = ["image", "compression", "jpeg", "axum", "microservice", "web", "api"]
categories = ["web-programming::http-server", "multimedia::images"]

[dependencies]
# Web framework and server
axum = { version = "0.7", features = ["json", "form", "matched-path", "tower-log"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5.0", features = ["cors", "trace", "propagate-header"] }

# Image processing
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp"] }

# Error handling and logging
anyhow = "1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
debug = true